(fix) swaager 오타 및 path 추가
